--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <div class="container">
-    <img src="IMG-20250302-WA0014.jpg" alt="Contoh Foto" class="responsif">
+    <img src="tes.jpg" alt="Contoh Foto" class="responsif">
   </div>
 
 </body>
