--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <div class="container">
-    <img src="FIKS.jpg" alt="Contoh Foto" class="responsif">
+    <img src="MUHAMAD HIRPANN.svg" alt="Contoh Foto" class="responsif">
   </div>
 
 </body>
